# eos-vala-hello-again

./: meson.build
data/: hello-again.appdata.xml  hello-again.desktop
po/: com.github.pgonzalezc.eos-vala-hello-again.pot  de.po  es.po
